modal fix. how do you like it? maybe bit too wide?

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -281,10 +281,7 @@ position: relative;
 .width-fit-content {
   width: fit-content;
 }
-.width-modal {
-  width: 50%;
-  margin-right: -12em;
-}
+
 // Smallest device
 @media (min-width: 100px) and (max-width: 575px) {
   .stock-cards {
